k8s/microservices/user/user-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: campaign-db
  namespace: campaign
spec:
  selector:
    matchLabels:
      app: campaign-db
  # serviceName: campaign-db-svc
  replicas: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: campaign-db
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mysql
          image: mysql:8.0.33
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
              - name: mysql-persistent-storage
                mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-persistent-storage
        namespace: campaign
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "nfs-client"
        resources:
          requests:
            storage: 5Gi


---
# a redis db for session management

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: session-db
  namespace: user
spec:
  selector:
    matchLabels:
      app: campaign-db
  serviceName: campaign-db-svc
  replicas: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: campaign-db
    spec:
      containers:
        - name: redis
          image: redis:7.0.11
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - name: redis-persistent-storage
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: redis-persistent-storage
        namespace: user
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "nfs-client"
        resources:
          requests:
            storage: 5Gi

---
apiVersion: v1
kind: Service
metadata:
  name: session-db-svc
  namespace: user
spec:
  selector:
    app: session-db
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
