k8s/microservices/user/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tg-user
  namespace: user
spec:
  selector:
    matchLabels:
      app: tg-user
  replicas: 2
  template:
    metadata:
      labels:
        app: tg-user
    spec:
      containers:
        - name: tg-user
          image: dopeteam/tg-user
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: tg-user-svc
  namespace: user
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /actuator/prometheus
    prometheus.io/port: "8080"
spec:
  selector:
    app: tg-user
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tg-user-ingress
  namespace: user
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - dope.yanychoi.site
      secretName: ingress-tls-secrets
  ingressClassName: nginx
  rules:
    - host: dope.yanychoi.site
      http:
        paths:
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: tg-user-svc
                port:
                  number: 8080
